# Pratica-Profissional

./: .gitignore  CONTRIBUTING.md  Graficos_Dashboard.md  GuiaMysql.md  LICENSE  README.md  alembic.ini  app.py  criar_tabelas.py  debug_workbench.py  pyproject.toml  requeriments.txt  requirements.txt  requiriments.txt
.github/: auto_assigin.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-labels.yml  auto-assign.yml  check-pr-issue.yml  ci.yml  merge-check.yml
alembic/: env.py
alembic/versions/: 18ae1fa7c1c0_estado_inicial_do_banco.py  3ddcfea462c8_adicionar_campos_reset_token_e_reset_.py  741e1f18573e_add_user_preferences_columns.py  876ce23e2db8_adicionar_coluna_tema_escuro_na_tabela_.py
instance/: site.db
models/: __init__.py  models.py
static/: footer.js  formularios.css  pagina_inicial.css  style.css
static/scripts/: ajuda.js  calendario.js  footer.js  grafico.js  listar_atividade.js  main.js
templates/: adicionar_atividade.html  adicionar_materia.html  ajuda.html  base.html  cadastro.html  calendario.html  configuracoes.html  criar_meta.html  dashboard.html  editar_atividade.html  editar_materia.html  editar_meta.html  esqueci_senha.html  index.html  listar_atividades.html  listar_metas.html  listar_notificacoes.html  login.html  perfil.html  politica_privacidade.html  pomodoro.html  resetar_senha.html  sobre.html  termos_servico.html
test/: test_app.py
