[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FocusUp"
version = "0.0.1"
dependencies = [
    "Flask>=3.1.1",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-Bcrypt>=1.0.1",
    "bcrypt>=4.1.3",
    "gunicorn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "assets*"]